--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Elastic SVG Logo</title>
+<title>gerard san miguel</title>
 <style>
   body {
     background: "white";
@@ -15,6 +15,7 @@
     width: 500px;
     cursor: grab;
     background: transparent;
+    overflow: visible;
   }
 
   svg:active {
