mejoras, solo falta final optimizado

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 
   <!-- Progress -->
   <div class="progress-top"></div>
-  <div class="progress-right"></div>
-  <div class="progress-bottom"></div>
-  <div class="progress-left"></div>
 
   <div class="logo-container">
     <svg preserveAspectRatio="xMidYMid meet"  overflow="visible" id="Capa_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1417.32 1417.32">
@@ -32,7 +29,7 @@
 
   <div id="scroll-hint">
     <span class="scroll-icon"></span>
-    <span class="scroll-arrow">↓  scroll</span>
+    <span class="scroll-arrow">↓  scroll  ↓</span>
   </div>
 
   <div class="scroll-area"></div>
